Wed May  3 11:30:09 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * performance-tests/DCPS/SimpleLatency/PubListener.cpp:

          Changed from char* to const char* to avoid build warnings from
          SunCC.

        * tests/DCPS/MultiDPTest/common.h:

          Removed the trailing comma from an enum to avoid build warnings
          from SunCC.

Tue May  2 16:59:07 USMST 2006  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/Qos_Helper.inl:

          Changed to call operator==(TAO::unbounded_value_sequence<CORBA::Octet>)
          explicitly. It is ugly but it resolves the compilation error on VC71
          against DOC's latest version. This seems be a compiler problem that
          does not recognize the global operator== when the global operator== is
          defined as inline and it's called by the code inside of a namespace.

        * bin/DCPS/CPPTemplate.pm:
        * dds/DCPS/SubscriberImpl.cpp:

          Fix bugs on subscriber that does not increase the sequence length
          before adding new elements to the sequence. This problem was detected
          in FooTest4_0 with the DOC's latest version which has the new sequence
          implementation.

Tue May  2 13:38:45 USMST 2006  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/FooTest3_2/FooTest3_2.mpc:
        * tests/DCPS/FooTest3_1/FooTest3_1NoKey.mpc:
        * tests/DCPS/FooTest3_1/FooTest3_1.mpc:
        * tests/transport/dds_comparative/dds_transport_comparative.mpc:

          Added inheritance from portableserver base project for subscriber.
          This would resolve compilation errors shown on static builds on linux
          platforms.

Mon May  1 13:16:56 USMST 2006  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/simpleTCP/SimpleTcpTransport.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpReconnectTask.h:
        * dds/DCPS/transport/simpleTCP/SimpleTcpReconnectTask.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpConnection.cpp:
